[gd_scene load_steps=3 format=3 uid="uid://cxxkxansqr52n"]

[ext_resource type="Texture2D" uid="uid://cgp6f6m73ehi7" path="res://icon.svg" id="1_ekf3w"]
[ext_resource type="Script" path="res://Objects/Campaign/campaign_ui/overview_container.gd" id="1_qqife"]

[node name="OverviewContainer" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 408.0
offset_bottom = 253.0
script = ExtResource("1_qqife")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 408.0
offset_bottom = 253.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionImage" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_ekf3w")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TEMPLE"
fit_content = true

[node name="Production" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "testing"
fit_content = true

[node name="Bonus" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "bonus"
fit_content = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2

[node name="DescriptionText" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "This is a [hint={Resources are pretty cool}]{Resource}[/hint]
"
fit_content = true
meta_underlined = false
hint_underlined = false

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Culture" type="RichTextLabel" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Religion" type="RichTextLabel" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelCost" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="LabelBuildTime" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="DestroyButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 321.0
offset_top = 154.0
offset_right = 390.0
offset_bottom = 185.0
focus_mode = 0
keep_pressed_outside = true
text = "Destroy"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 2
offset_left = 373.0
offset_top = -32.0
offset_right = 405.0
focus_mode = 0
text = "X"
icon_alignment = 1

[connection signal="meta_clicked" from="PanelContainer/VBoxContainer/ScrollContainer/MarginContainer/DescriptionText" to="PanelContainer" method="_on_description_text_meta_clicked"]
[connection signal="pressed" from="DestroyButton" to="." method="_on_destroy_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
